--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
 		"url": "git://github.com/popeindustries/buddy-watcher.git"
 	},
   "readmeFilename": "README.md",
-	"readme": ""
+	"readme": "[![Build Status](https://travis-ci.org/popeindustries/buddy-watcher.png)](https://travis-ci.org/popeindustries/buddy-watcher)\n\nAn event based file watching utility.\n\n## Installation\n\n```bash\nnpm install buddy-watcher\n```\n\n## Usage\n```javascript\nvar Watcher = require('buddy-watcher');\n\nvar watcher = new Watcher();\nwatcher.watch('some/file/or/directory')\n  .on('error', function(err) {\n    // Handle error\n  })\n  .on('create', function(filepath, stats) {\n    // Handle new file or directory\n  })\n  .on('change', function(filepath, stats) {\n    // Handle update to file\n  })\n  .on('delete', function(filepath) {\n    // Handle removal of file or directory\n  })\n```"
 }
